--- a/StockServiceHttpClient/StockServiceHttpClient/Views/Home/Symbol.cshtml
+++ b/StockServiceHttpClient/StockServiceHttpClient/Views/Home/Symbol.cshtml
@@ -1,9 +1,7 @@
 ﻿@model List<StockServiceHttpClient.Models.StockSymbol>
 
-<select id="symbols" onchange="func()">
+
     @foreach(var item in Model)
     {
-        <option value="@item.symbol">@item.symbol</option>
+        <option value="@item.symbol">@item.description</option>
     }
-
-</select>
