Added Category APi

--- a/ViewComponent/ViewComponent/Views/Home/Index.cshtml
+++ b/ViewComponent/ViewComponent/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    @await Component.InvokeAsync("Grid")
+    @* @await Component.InvokeAsync("Grid") *@
     <button id="button" type="button">Person Details</button>
 
     <div class="container" id="dt">
