--- a/CapstoneApplication/CapstoneApplication/Views/Shared/_Layout.cshtml
+++ b/CapstoneApplication/CapstoneApplication/Views/Shared/_Layout.cshtml
@@ -7,13 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" asp-fallback-test="window.jQuery" asp-fallback-src="~/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" asp-fallback-test="window.jQuery.validator" asp-fallback-src="~/jquery.validate.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js" asp-fallback-test="window.jQuery.validator.unobstrusive" asp-fallback-src="~/jquery.validate.unobtrusive.min.js"></script>
 </head>
 <body>
     <a asp-action="AddProduct" asp-controller="Product" class="btn btn-primary">Add Product</a>
     <div>
+        @User.Identity.Name
+    </div>
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <a asp-action="Register" asp-controller="Login">Register</a>
+        <a asp-action="Login" asp-controller="Login">Login</a>
+    }
+    <div>
         @RenderBody()
     </div>
-    @await RenderSectionAsync("_ValidationScriptsPartial", required: false)
+
 
 </body>
 </html>
